Fix alignment of game container in frogger

--- a/assets/css/frogger.css
+++ b/assets/css/frogger.css
@@ -12,7 +12,6 @@ body {
     background-size: cover;
     height: 100vh;
     overflow: hidden;
-    position: fixed;
 }
 
 /* ---------------------------------------------- Game Container */
@@ -23,8 +22,8 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
-    width: 85vw;
+    position: fixed;
+    width: 100%;
     height: 80vh;
     margin: 5vh auto;
     border: 2px solid #010124;
@@ -41,7 +40,8 @@ body {
     background: url("../img/frogger/background.png") no-repeat fixed top;
     background-size: 100% 100%;
     border: 5px solid #82a17c;
-    margin: 5vh auto;
+    margin: 5vh auto; 
+    align-items: center;
 }
 
 canvas {
